Fixes footer spacing for iPhone 5s resolution
- Sunrise Robot h2 in the footer is no longer too large on iPhone 5S
and smaller screens, such that it now fits on one line.
- The Support button in the body is no longer being covered by the
footer due to an insufficient margin setting on the smallest viewport.

--- a/source/stylesheets/sr.css
+++ b/source/stylesheets/sr.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  margin-bottom: 216px;
+  margin-bottom: 250px;
 }
 
 header {
@@ -132,8 +132,8 @@ footer p, footer ul li, footer ol li {
 
 footer h2 {
   color: #ebabb6;
-  font-size: 42px;
-  line-height: 60px;
+  font-size: 36px;
+  line-height: 54px;
   font-weight: normal;
   margin: 4px 0 8px;
   text-shadow: 4px 4px 0 #ffb16b, 8px 8px 0 #c85e00; 
@@ -399,7 +399,14 @@ footer h2 a:hover, footer h2 a:focus {
 
 @media (min-width: 480px) {
 
+  body {
+    margin-bottom: 216px;
+  }
 
+  footer h2 {
+    font-size: 42px;
+    line-height: 60px;
+  }
 
 }
 
@@ -430,6 +437,11 @@ footer h2 a:hover, footer h2 a:focus {
   .index-show-title {
     font-size: 28px;
     line-height: 36px;
+  }
+
+  footer h2 {
+    font-size: 54px;
+    line-height: 72px;
   }
 
 }
